<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/posterid"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/imgheightt"
            android:scaleType="fitXY"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/moviename" />

                <TextView
                    android:id="@+id/moviename"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/leftpadding"

                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/release" />

                <TextView
                    android:id="@+id/release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/leftpadding"

                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/vote_average" />

                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/leftpadding"

                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/popularity" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/leftpadding"

                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/overvew"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/leftpadding"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CCC" />

</LinearLayout>